# mouse-side-buttons

./: CMakeLists.txt  README.md
src/: main.c
